--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,14 @@ vaadin.launch-browser=true
 # For more information https://vaadin.com/docs/latest/flow/integrations/spring/configuration#special-configuration-parameters
 vaadin.allowed-packages=com.vaadin,org.vaadin,com.flowingcode,com.hallvardlaerum
 
+
+# MariaDB configuration.
+spring.datasource.url = jdbc:mariadb://localhost:3306/blaahvalen
+spring.datasource.username = hallvard
+spring.datasource.password = KaldMaleri
+
+
+
 # Let Hibernate update the schema automatically or create it if it does not exist.
 #
 # DO NOT DO THIS IN PRODUCTION!
@@ -15,3 +23,6 @@ vaadin.allowed-packages=com.vaadin,org.vaadin,com.flowingcode,com.hallvardlaerum
 # Instead, use Flyway or another controlled way of managing your database schema.
 # See https://vaadin.com/docs/latest/building-apps/forms-data/add-flyway for instructions.
 spring.jpa.hibernate.ddl-auto=update
+
+spring.servlet.multipart.max-file-size = 10000000
+spring.servlet.multipart.max-request-size = 10000000
