--- a/pom.xml
+++ b/pom.xml
@@ -4,20 +4,22 @@
     <!-- Project from https://start.vaadin.com/9589daae-52bc-43b5-b593-bbaca67bb5a5 -->
     <groupId>com.hallvardlaerum</groupId>
     <artifactId>blaahvalen</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <version>0.5-SNAPSHOT</version>
+    <!-- <packaging>jar</packaging> -->
+    <packaging>war</packaging>
     
     <properties>
         <java.version>21</java.version>
-        <vaadin.version>24.9.3</vaadin.version>
+        <vaadin.version>24.9.5</vaadin.version>
     </properties>
     
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.6</version>
+        <version>3.5.5</version>
         <relativePath/>
     </parent>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -32,11 +34,32 @@
     
     <dependencies>
 
+        <!--
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        -->
+
+        <dependency>
+            <groupId>net.sourceforge.dynamicreports</groupId>
+            <artifactId>dynamicreports-core</artifactId>
+            <version>6.20.1</version>
+        </dependency>
+
+        <!--
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        -->
 
         <dependency>
             <groupId>com.hallvardlaerum.libs</groupId>
             <artifactId>havaara</artifactId>
-            <version>1.6-SNAPSHOT</version>
+            <version>1.8-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -130,6 +153,7 @@
     </profiles>
     
     <repositories>
+
         <repository>
             <id>central</id>
             <url>https://repo.maven.apache.org/maven2</url>
@@ -141,5 +165,16 @@
             <id>vaadin-directory</id>
             <url>https://maven.vaadin.com/vaadin-addons</url>
         </repository>
+        <repository>
+            <id>vaadin-prereleases</id>
+            <url>https://maven.vaadin.com/vaadin-prereleases</url>
+        </repository>
     </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>vaadin-prereleases</id>
+            <url>https://maven.vaadin.com/vaadin-prereleases</url>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
